--- a/Sunwise/View/Sunbathe/Sunbathe.storyboard
+++ b/Sunwise/View/Sunbathe/Sunbathe.storyboard
@@ -107,9 +107,8 @@
                                                             <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="75c-Ik-uyV">
                                                                 <rect key="frame" x="0.0" y="30" width="388" height="190"/>
                                                                 <subviews>
-                                                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="nRy-LE-Lch">
+                                                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="nRy-LE-Lch" customClass="CircularProgressBarView" customModule="Sunwise" customModuleProvider="target">
                                                                         <rect key="frame" x="0.0" y="0.0" width="190" height="190"/>
-                                                                        <color key="backgroundColor" systemColor="systemGreenColor"/>
                                                                         <constraints>
                                                                             <constraint firstAttribute="width" constant="190" id="8hn-j2-UZT"/>
                                                                             <constraint firstAttribute="height" constant="190" id="eDQ-3j-vam"/>
@@ -228,6 +227,7 @@
                     <simulatedTabBarMetrics key="simulatedBottomBarMetrics"/>
                     <connections>
                         <outlet property="calendar" destination="Pgw-Zp-8SI" id="kRu-zq-CfF"/>
+                        <outlet property="circularProgressBarView" destination="nRy-LE-Lch" id="L5R-YW-PQF"/>
                         <outlet property="progressLabel" destination="WXF-Af-3FL" id="iFg-qU-u5U"/>
                         <outlet property="protectionView" destination="Qhh-dR-ibg" id="6GM-Up-non"/>
                         <outlet property="seeMoreButton" destination="YR1-y1-b69" id="6GC-qw-zXl"/>
@@ -285,9 +285,6 @@
         </systemColor>
         <systemColor name="systemGray6Color">
             <color red="0.94901960784313721" green="0.94901960784313721" blue="0.96862745098039216" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-        </systemColor>
-        <systemColor name="systemGreenColor">
-            <color red="0.20392156862745098" green="0.7803921568627451" blue="0.34901960784313724" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
         <systemColor name="systemMintColor">
             <color red="0.0" green="0.7803921568627451" blue="0.74509803921568629" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
