--- a/Sunwise/View/Onboarding/Base.lproj/Main.storyboard
+++ b/Sunwise/View/Onboarding/Base.lproj/Main.storyboard
@@ -4,6 +4,7 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="21505"/>
+        <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
@@ -17,8 +18,8 @@
                         <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="hk5-64-7rl">
-                                <rect key="frame" x="40" y="99" width="313" height="315"/>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="logo" translatesAutoresizingMaskIntoConstraints="NO" id="hk5-64-7rl">
+                                <rect key="frame" x="0.0" y="99" width="393" height="315"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="315" id="hiP-us-sdB"/>
                                 </constraints>
@@ -28,28 +29,26 @@
                                 <constraints>
                                     <constraint firstAttribute="height" constant="39" id="Njo-zo-TCK"/>
                                 </constraints>
-                                <fontDescription key="fontDescription" type="boldSystem" pointSize="32"/>
-                                <nil key="textColor"/>
+                                <fontDescription key="fontDescription" type="boldSystem" pointSize="35"/>
+                                <color key="textColor" name="LB-mainText"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" text="Sunwise will help you to achieve your ideal sun exposure target everyday, in between your routines" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="h41-va-dIN">
                                 <rect key="frame" x="40" y="499" width="255" height="72"/>
-                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="255" id="E5h-J8-TUm"/>
                                     <constraint firstAttribute="height" constant="72" id="gOf-QJ-vcK"/>
                                 </constraints>
-                                <color key="textColor" systemColor="labelColor"/>
+                                <color key="textColor" name="LB-mainText"/>
                                 <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="14"/>
                                 <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                             </textView>
                             <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" text="Before starting, let's quickly check your skin type for ideal sun exposure recommendation." textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="uH0-9V-DAp">
                                 <rect key="frame" x="40" y="697" width="313" height="42"/>
-                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="42" id="pcS-Qn-jqX"/>
                                 </constraints>
-                                <color key="textColor" systemColor="labelColor"/>
+                                <color key="textColor" name="LB-mainText"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="12"/>
                                 <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                             </textView>
@@ -58,15 +57,16 @@
                                 <constraints>
                                     <constraint firstAttribute="height" constant="35" id="Nc9-I7-hvt"/>
                                 </constraints>
+                                <color key="tintColor" name="CL-mainRed"/>
                                 <state key="normal" title="Button"/>
-                                <buttonConfiguration key="configuration" style="tinted" title="Set Skin Profile"/>
+                                <buttonConfiguration key="configuration" style="filled" title="Set Skin Profile"/>
                                 <connections>
                                     <action selector="setSkinProfileButtonTapped:" destination="BYZ-38-t0r" eventType="touchUpInside" id="8JU-No-X1A"/>
                                 </connections>
                             </button>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
-                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <color key="backgroundColor" name="BG-mainYellow"/>
                         <constraints>
                             <constraint firstItem="QsP-HP-ZAG" firstAttribute="centerX" secondItem="3d3-no-cN2" secondAttribute="centerX" id="2hF-md-gI7"/>
                             <constraint firstItem="h41-va-dIN" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="40" id="4Jo-1V-pIb"/>
@@ -76,9 +76,9 @@
                             <constraint firstItem="QsP-HP-ZAG" firstAttribute="top" secondItem="uH0-9V-DAp" secondAttribute="bottom" constant="20" id="TY5-6n-R6D"/>
                             <constraint firstItem="uH0-9V-DAp" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="40" id="amG-6C-olx"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="QsP-HP-ZAG" secondAttribute="bottom" constant="24" id="dZY-br-goa"/>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="hk5-64-7rl" secondAttribute="trailing" constant="40" id="jHa-Z9-hnb"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="hk5-64-7rl" secondAttribute="trailing" id="jHa-Z9-hnb"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="uH0-9V-DAp" secondAttribute="trailing" constant="40" id="jzh-lw-pA5"/>
-                            <constraint firstItem="hk5-64-7rl" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="40" id="kj1-VN-u6o"/>
+                            <constraint firstItem="hk5-64-7rl" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="kj1-VN-u6o"/>
                             <constraint firstItem="h41-va-dIN" firstAttribute="top" secondItem="hk5-64-7rl" secondAttribute="bottom" constant="85" id="tll-mw-lvt"/>
                             <constraint firstItem="3d3-no-cN2" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="40" id="wcu-u1-Rai"/>
                         </constraints>
@@ -299,9 +299,16 @@
     <resources>
         <image name="chevron.backward" catalog="system" width="97" height="128"/>
         <image name="chevron.right" catalog="system" width="97" height="128"/>
-        <systemColor name="labelColor">
-            <color red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-        </systemColor>
+        <image name="logo" width="640" height="360"/>
+        <namedColor name="BG-mainYellow">
+            <color red="1" green="0.88200002908706665" blue="0.36500000953674316" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
+        <namedColor name="CL-mainRed">
+            <color red="0.86299997568130493" green="0.20800000429153442" blue="0.20800000429153442" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
+        <namedColor name="LB-mainText">
+            <color red="0.54100000858306885" green="0.13300000131130219" blue="0.33300000429153442" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
