--- a/Sunwise/View/Onboarding/Base.lproj/Main.storyboard
+++ b/Sunwise/View/Onboarding/Base.lproj/Main.storyboard
@@ -264,7 +264,44 @@
                     <tabBar key="tabBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="gmR-WH-ucG">
                         <rect key="frame" x="0.0" y="0.0" width="393" height="49"/>
                         <autoresizingMask key="autoresizingMask"/>
-                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <color key="backgroundColor" name="TN-BG-mainYellow"/>
+                        <color key="tintColor" name="TN-LB-active"/>
+                        <color key="barTintColor" name="TN-LB-unactive"/>
+                        <color key="selectedImageTintColor" name="TN-LB-active"/>
+                        <tabBarAppearance key="standardAppearance">
+                            <color key="backgroundColor" name="TN-BG-mainYellow"/>
+                            <color key="shadowColor" name="RG-track"/>
+                            <color key="selectionIndicatorTintColor" name="TN-LB-active"/>
+                        </tabBarAppearance>
+                        <tabBarAppearance key="scrollEdgeAppearance">
+                            <color key="backgroundColor" name="TN-BG-mainYellow"/>
+                            <color key="shadowColor" name="TN-BG-mainYellow"/>
+                            <tabBarItemAppearance key="stackedLayoutAppearance">
+                                <tabBarItemStateAppearance key="normal">
+                                    <textAttributes key="titleTextAttributes">
+                                        <color key="textColor" name="TN-LB-unactive"/>
+                                        <color key="textShadowColor" name="TN-LB-unactive"/>
+                                    </textAttributes>
+                                    <color key="iconColor" name="TN-LB-unactive"/>
+                                    <color key="badgeBackgroundColor" name="TN-LB-active"/>
+                                </tabBarItemStateAppearance>
+                                <tabBarItemStateAppearance key="selected">
+                                    <textAttributes key="titleTextAttributes">
+                                        <color key="textColor" name="TN-LB-active"/>
+                                        <color key="textShadowColor" name="TN-LB-active"/>
+                                    </textAttributes>
+                                    <color key="iconColor" name="TN-LB-active"/>
+                                    <color key="badgeBackgroundColor" name="TN-LB-active"/>
+                                    <textAttributes key="badgeTextAttributes">
+                                        <color key="textColor" name="LB-mainText"/>
+                                        <color key="textShadowColor" name="LB-mainText"/>
+                                    </textAttributes>
+                                </tabBarItemStateAppearance>
+                                <tabBarItemStateAppearance key="disabled"/>
+                                <tabBarItemStateAppearance key="focused"/>
+                            </tabBarItemAppearance>
+                            <color key="selectionIndicatorTintColor" name="TN-LB-active"/>
+                        </tabBarAppearance>
                     </tabBar>
                     <connections>
                         <segue destination="ZFJ-uJ-YiX" kind="relationship" relationship="viewControllers" id="UIs-er-KbC"/>
@@ -338,8 +375,20 @@
         <namedColor name="LB-mainText">
             <color red="0.54100000858306885" green="0.13300000131130219" blue="0.33300000429153442" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
+        <namedColor name="RG-track">
+            <color red="0.93300002813339233" green="0.93300002813339233" blue="0.77600002288818359" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
         <namedColor name="SkinType1">
             <color red="0.95686274509803915" green="0.81568627450980391" blue="0.69019607843137254" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
+        <namedColor name="TN-BG-mainYellow">
+            <color red="1" green="1" blue="0.81599998474121094" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
+        <namedColor name="TN-LB-active">
+            <color red="0.54100000858306885" green="0.13300000131130219" blue="0.33300000429153442" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
+        <namedColor name="TN-LB-unactive">
+            <color red="0.77300000190734863" green="0.5690000057220459" blue="0.57300001382827759" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
